--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,151 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  background: rgb(141, 141, 35);
+  width: 40%;
+  height: 100%;
+  margin: 0 auto;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+#root {
+  width: 50%;
+  margin: 0 auto;
+}
+
+.header {
+  background: rgb(115, 49, 49);
+  width: 50%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 20px;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+}
+
+.contacts__search {
+  width: 100%;
+  padding: 10px 0;
+  text-indent: 7px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+
+.contacts__search:focus {
+  box-shadow: 0px 0px 10px 3px rgb(108 108 108);
+}
+
+.contact__wrapper {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact__wrapper-card {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  border: 1px solid #fff;
+  margin: 2px;
+  padding: 0 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.contact__wrapper-card:hover {
+  background: rgb(214, 210, 210);
+}
+
+.card__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  height: 25px;
+}
+
+.card__wrapper {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0;
+  font-size: 25px;
+  font-weight: 600;
+  background: #ccc;
+  border-radius: 50%;
+}
+
+.card__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 20px;
+}
+
+.card__info-name {
+  font-size: 20px;
+}
+
+.card__info-phone {
+  font-size: 14px;
+}
+
+.checkbox {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+@media (max-width: 769px) {
+  .wrapper {
+    width: 100%;
+    overflow: hidden;
+  }
+  .header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 85%;
+    margin: 20px 5px;
+    margin: 5px 5px;
+  }
+  #root {
+    width: 100%;
+  }
+
+  .contacts__search {
+    width: 100%;
+    align-self: center;
+  }
+
+  .contact__wrapper {
+    width: 95%;
+  }
+
 }
